--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crudsinfotech-nodeapp",
+  "name": "jellybean-nodeapp",
   "version": "1.0.0",
   "description": "A Hello World HTTP server using Node JS",
   "main": "main.js",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rchidana/NodeApp"
+    "url": "https://github.com/saquibm6/NodeApp"
   },
   "keywords": [
     "node",
     "docker",
     "dockerfile"
   ],
-  "author": "crudsinfotechng@gmail.com",
-  "license": "ISC",
+  "author": "saquib@gmail.com",
+  "license": "MSM",
   "devDependencies": { "test": ">=0.6.0" }
 }
 
